--- a/package.json
+++ b/package.json
@@ -4,18 +4,21 @@
   "description": "Photorealistic 3D earth and space scene demo rendered and animated in WebGL.",
   "private": false,
   "scripts": {
-    "start": "node ./bin/www",
-    "postinstall": "gulp install"
+    "start": "node app.js",
+    "dev": "node -r esm app.js",
+    "postinstall": "gulp install",
+    "vercel-build": "npm install && npm run build"
   },
   "dependencies": {
-    "babel-register": "^6.4.3",
-    "babel-preset-es2015": "^6.3.13",
-    "body-parser": "^1.14.2",
-    "cookie-parser": "^1.4.1",
-    "express": "^4.13.3",
-    "express-handlebars": "^2.0.1",
-    "morgan": "^1.6.1",
-    "serve-favicon": "^2.3.0"
+    "@vercel/node": "^4.2.3",
+    "body-parser": "^1.20.2",
+    "cookie-parser": "^1.4.6",
+    "dotenv": "^16.3.1",
+    "esm": "^3.2.25",
+    "express": "^4.18.2",
+    "express-handlebars": "^7.1.2",
+    "morgan": "^1.10.0",
+    "serve-favicon": "^2.5.0"
   },
   "devDependencies": {
     "gulp": "^3.9.0",
